Fix config file for mysql

--- a/parent/env/test/.my.cnf
+++ b/parent/env/test/.my.cnf
@@ -1,6 +1,6 @@
 [client]
 database = wishmakers$test
-host = localhost
+host = wishmakers.mysql.pythonanywhere-services.com
 user = wishmakers$test
-password = Harambe4Ever!
+password = mastropiero_16
 default-character-set = utf8
