Fix test connection file

--- a/parent/env/test/.my.cnf
+++ b/parent/env/test/.my.cnf
@@ -1,6 +1,6 @@
 [client]
 database = wishmakers$test
 host = wishmakers.mysql.pythonanywhere-services.com
-user = wishmakers$test
+user = wishmakers
 password = mastropiero_16
 default-character-set = utf8
