--- a/application.yml
+++ b/application.yml
@@ -21,9 +21,9 @@ project:
         build:
           run:
             - execute::py os.chdir("${{ web.base-path }}")
-            - execute::sh if [[ -d lib ]]; then rm -rd lib; fi
-            - execute::sh if [[ -d node_modules ]]; then rm -rd node_modules; fi
-            - execute::sh if [[ -f yarn.lock ]]; then rm -f yarn.lock; fi
+            - execute::sh if [[ -d "${{ web.base-path }}/lib" ]]; then rm -rd "${{ web.base-path }}/lib"; fi
+            - execute::sh if [[ -d "${{ web.base-path }}/node_modules" ]]; then rm -rd "${{ web.base-path }}/node_modules"; fi
+            - execute::sh if [[ -f "${{ web.base-path }}/yarn.lock" ]]; then rm -f "${{ web.base-path }}/yarn.lock"; fi
             - execute::sh ${{ YARN }} install
             - execute::sh ${{ YARN }} run build
             - execute::py os.chdir("${{ project.home }}")
